<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/say_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_item_border"
    android:orientation="vertical"
    android:padding="10dp">

    <cn.zyrkj.monsterbeta10.view.XCRoundImageView
        android:id="@+id/userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/users1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/userName"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toRightOf="@+id/userImage"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/type"
        android:textAlignment="center"
        android:textColor="@color/colorGreen"
        app:layout_constraintLeft_toRightOf="@+id/userName"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <Spinner
        android:id="@+id/operate_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/operate_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/content"
        android:textColor="@color/wordColor"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage" />

    <cn.zyrkj.monsterbeta10.view.NineGridTestLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout_nine_grid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:sapcing="4dp" />

    <TextView
        android:id="@+id/vContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/vcontent_bg"
        android:text="@string/vContent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_nine_grid" />

    <cn.zyrkj.monsterbeta10.view.XCRoundImageView
        android:id="@+id/visitImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/user3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vContent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/visitCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/visitCount"
        app:layout_constraintLeft_toRightOf="@+id/visitImage"
        app:layout_constraintTop_toBottomOf="@+id/vContent"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="8dp" />

    <ImageView
        android:id="@+id/pariseImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription=""
        app:layout_constraintLeft_toRightOf="@+id/visitCount"
        app:layout_constraintTop_toBottomOf="@+id/vContent"
        app:srcCompat="@drawable/parise_default"
        tools:ignore="ContentDescription,RtlHardcoded"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/praiseCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/praiseCount"
        app:layout_constraintLeft_toRightOf="@+id/pariseImage"
        app:layout_constraintTop_toBottomOf="@+id/vContent"
        tools:ignore="RtlHardcoded"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/readContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/readContent"
        app:layout_constraintRight_toLeftOf="@+id/readCount"
        app:layout_constraintTop_toBottomOf="@+id/vContent"
        tools:ignore="RtlHardcoded"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/readCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/readCount"
        android:textAlignment="viewStart"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vContent"
        tools:ignore="RtlHardcoded"
        android:layout_marginEnd="16dp" />

</android.support.constraint.ConstraintLayout>